build: add open api docs
